# csci_420_robotics_labs

lab7_ws/src/flightcontroller/: CMakeLists.txt  package.xml
lab7_ws/src/flightcontroller/launch/: angle.launch  fly.launch  position.launch  velocity.launch
lab7_ws/src/flightcontroller/maps/: map_medium0.pgm  map_medium0.yaml
lab7_ws/src/flightcontroller/src/: angle_calculator.py  angle_controller.py  ground_robot_physics.py  position_controller.py  tower.py  velocity_controller.py
lab7_ws/src/flightgoggles/flightgoggles/: CMakeLists.txt  package.xml
lab7_ws/src/flightgoggles/flightgoggles/config/drone/: drone.yaml
lab7_ws/src/flightgoggles/flightgoggles/launch/: core.launch
lab7_ws/src/flightgoggles/flightgoggles_uav_dynamics/: CMakeLists.txt  package.xml
lab7_ws/src/flightgoggles/flightgoggles_uav_dynamics/libs/multicopterDynamicsSim/: multicopterDynamicsSim.cpp
lab7_ws/src/flightgoggles/flightgoggles_uav_dynamics/src/: flightgoggles_uav_dynamics_node.cpp  flightgoggles_uav_dynamics_node.hpp
lab7_ws/src/sensor_simulation/: CMakeLists.txt  package.xml
lab7_ws/src/sensor_simulation/launch/: sensors.launch
lab7_ws/src/sensor_simulation/src/: down_facing_camera.py  pressure.py
lab7_ws/src/simple_control/: package.xml  setup.py
lab7_ws/src/simple_control/simple_control/: astar_class.py  debug_pid.py  geofence_and_mission.py  ground_robot_controller.py  path_planner.py  tower_to_map.py  velocity_pid.py  world_to_drone.py
lab7_ws/src/simple_sim/: package.xml  setup.py
lab7_ws/src/simple_sim/simple_sim/: simple_sim_node.py
lab7_ws/src/visualizer/: CMakeLists.txt  package.xml
lab7_ws/src/visualizer/launch/: view.launch
lab7_ws/src/visualizer/src/: gui.py  gui_controller.py
project/src/simple_control/launch/: simple_control.launch
project/src/simple_control/simple_control/: astar_class.py  door_detector.py  rescue_mission.py  rm_ck1.py
