<?xml version="1.0"?>
<package format="2">
  <name>flightcontroller</name>
  <version>0.0.0</version>
  <description>The flightcontroller package</description>

  <maintainer email="woodlief@wm.edu">Trey Woodlief</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- Message types used -->
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
