<?xml version="1.0"?>
<package format="2">
  <name>flightgoggles_uav_dynamics</name>
  <version>0.0.0</version>
  <description>The flightgoggles_uav_dynamics package</description>

  <maintainer email="winterg@mit.edu">Winter Guerra</maintainer>

  <license>MIT</license>

  <author>Ezra Tal</author>
  <author>Winter Guerra</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- Message types used -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Libraries -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
